add SOURCES output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -283,6 +283,8 @@ set(SOURCES
     ${PROTO_SRCS}
     )
 
+message("SOURCES=${SOURCES}")
+
 add_subdirectory(src)
 if(BUILD_EXAMPLE)
     add_subdirectory(example)
