Renam libbrpc_static.a to libbrpc.a

--- a/example/redis_c++/CMakeLists.txt
+++ b/example/redis_c++/CMakeLists.txt
@@ -25,7 +25,7 @@ find_path(BRPC_INCLUDE_PATH NAMES brpc/server.h)
 if(EXAMPLE_LINK_SO)
     find_library(BRPC_LIB NAMES brpc)
 else()
-    find_library(BRPC_LIB NAMES libbrpc_static.a brpc)
+    find_library(BRPC_LIB NAMES libbrpc.a brpc)
 endif()
 if((NOT BRPC_INCLUDE_PATH) OR (NOT BRPC_LIB))
     message(FATAL_ERROR "Fail to find brpc")
