--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,14 +16,17 @@ add_library(OBJ_LIB OBJECT ${SOURCES})
 set_property(TARGET ${OBJ_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
 set_property(TARGET ${BUTIL_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
 
-add_library(brpc SHARED $<TARGET_OBJECTS:BUTIL_LIB> $<TARGET_OBJECTS:OBJ_LIB>)
-add_library(brpc_static STATIC $<TARGET_OBJECTS:BUTIL_LIB> $<TARGET_OBJECTS:OBJ_LIB>)
+add_library(brpc-shared SHARED $<TARGET_OBJECTS:BUTIL_LIB> $<TARGET_OBJECTS:OBJ_LIB>)
+add_library(brpc-static STATIC $<TARGET_OBJECTS:BUTIL_LIB> $<TARGET_OBJECTS:OBJ_LIB>)
 
-target_link_libraries(brpc ${DYNAMIC_LIB})
+target_link_libraries(brpc-shared ${DYNAMIC_LIB})
 
 if(WITH_GLOG)
-    target_link_libraries(brpc ${GLOG_LIB})
+    target_link_libraries(brpc-shared ${GLOG_LIB})
 endif()
+
+SET_TARGET_PROPERTIES(brpc-static PROPERTIES OUTPUT_NAME brpc CLEAN_DIRECT_OUTPUT 1)
+SET_TARGET_PROPERTIES(brpc-shared PROPERTIES OUTPUT_NAME brpc CLEAN_DIRECT_OUTPUT 1)
 
 # for protoc-gen-mcpack
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/output/bin)
@@ -32,7 +35,7 @@ set(protoc_gen_mcpack_SOURCES
     ${CMAKE_SOURCE_DIR}/src/mcpack2pb/generator.cpp
  )
 add_executable(protoc-gen-mcpack ${protoc_gen_mcpack_SOURCES})
-target_link_libraries(protoc-gen-mcpack brpc)
+target_link_libraries(protoc-gen-mcpack brpc-shared)
     
 get_property(LIB64 GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS)
 if ("${LIB64}" STREQUAL "TRUE")
@@ -43,13 +46,13 @@ endif()
 
 #install directory
 # cmake -DCMAKE_INSTALL_PREFIX=/usr
-install(TARGETS brpc
+install(TARGETS brpc-shared
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib${LIBSUFFIX}
         ARCHIVE DESTINATION lib${LIBSUFFIX}
         )
 
-install(TARGETS brpc_static
+install(TARGETS brpc-static
         RUNTIME DESTINATION bin
         LIBRARY DESTINATION lib${LIBSUFFIX}
         ARCHIVE DESTINATION lib${LIBSUFFIX}
