--- a/tools/parallel_http/CMakeLists.txt
+++ b/tools/parallel_http/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(parallel_http parallel_http.cpp)
-target_link_libraries(parallel_http brpc_static ${DYNAMIC_LIB})
+target_link_libraries(parallel_http brpc-static ${DYNAMIC_LIB})
