Install protobuf files as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,7 +325,7 @@ file(COPY ${CMAKE_SOURCE_DIR}/src/
         PATTERN "*.h"
         PATTERN "*.hpp"
         )
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/
+install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/output/include/
         DESTINATION include
         FILES_MATCHING
         PATTERN "*.h"
