--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -13,11 +13,10 @@ exemptLabels:
 staleLabel: wontfix
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
-  This issue has been automatically marked as stale because it has not had
-  recent activity. It will be closed if no further activity occurs. Thank you
-  for your contributions.
-  由于最近缺乏更新，这个issue已被自动标记为过期。如果接下来几天仍没有更新，它将会被关闭。感谢你的贡献。
+  This issue has been automatically marked as stale because it's inactive for a long time.
+  It will be closed if no further activity occurs. Thank you for your contributions.
+  由于很久没有活跃，此issue已被自动标记为过期。若之后几天仍无变化，它将会被关闭。感谢你的贡献。
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: >
   This issue is automatically closed, reopen if you have further comments.
-  这个issue被自动关闭，你有新想法的话可以重新打开。
+  此issue被自动关闭，当你有新想法时可重新打开。
