--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -14,9 +14,8 @@ staleLabel: wontfix
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
   This issue has been automatically marked as stale because it's inactive for a long time.
-  It will be closed if no further activity occurs. Thank you for your contributions.
-  由于很久没有活跃，此issue已被自动标记为过期。若之后几天仍无变化，它将会被关闭。感谢你的贡献。
+  It will be closed if no further activity occurs, reopen if you have further ideas.
+  Thank you for your contributions!
+  由于很久没有活跃，此Issue已被自动标记为过期。之后几天仍无变化的话将会被关闭，若你有新想法则可重新打开。感谢你的贡献!
 # Comment to post when closing a stale issue. Set to `false` to disable
-closeComment: >
-  This issue is automatically closed, reopen if you have further comments.
-  此issue被自动关闭，当你有新想法时可重新打开。
+closeComment: false
