Incorporate protos into dependency system so reconfiguration no longer triggers recompiling

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,16 +1,26 @@
 find_package(Gperftools)
 include_directories(${GPERFTOOLS_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-file(GLOB PROTOS "*.proto")
-list(APPEND PROTO_FLAGS -I${CMAKE_CURRENT_BINARY_DIR})
-foreach(PROTO ${PROTOS})
-    get_filename_component(PROTO_WE ${PROTO} NAME_WE)
-    list(APPEND TEST_PROTO_SRCS "${CMAKE_CURRENT_BINARY_DIR}/${PROTO_WE}.pb.cc")
-    execute_process(
-        COMMAND ${PROTOBUF_PROTOC_EXECUTABLE} ${PROTO_FLAGS} --cpp_out=${CMAKE_CURRENT_BINARY_DIR} --proto_path=${PROTOBUF_INCLUDE_DIR} --proto_path=${CMAKE_SOURCE_DIR}/src --proto_path=${CMAKE_SOURCE_DIR}/test ${PROTO}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    )
-endforeach()
+
+include(CompileProto)
+set(TEST_PROTO_FILES addressbook1.proto
+                     addressbook_encode_decode.proto
+                     addressbook_map.proto
+                     addressbook.proto
+                     echo.proto
+                     iobuf.proto
+                     message.proto
+                     repeated.proto
+                     snappy_message.proto
+                     v1.proto
+                     v2.proto)
+file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/test/hdrs)
+set(PROTOC_FLAGS ${PROTOC_FLAGS} -I${CMAKE_SOURCE_DIR}/src)
+compile_proto(PROTO_HDRS PROTO_SRCS ${CMAKE_BINARY_DIR}/test
+                                    ${CMAKE_BINARY_DIR}/test/hdrs
+                                    ${CMAKE_SOURCE_DIR}/test
+                                    "${TEST_PROTO_FILES}")
+add_library(TEST_PROTO_LIB OBJECT ${PROTO_SRCS} ${PROTO_HDRS})
 
 option(BRPC_DOWNLOAD_GTEST "Download and build a fresh copy of googletest. Requires Internet access." OFF)
 set(BRPC_SYSTEM_GTEST_SOURCE_DIR "" CACHE PATH "System googletest source directory.")
@@ -151,26 +161,28 @@ list(REMOVE_ITEM BVAR_SOURCES ${CMAKE_SOURCE_DIR}/src/bvar/default_variables.cpp
 
 file(GLOB TEST_BVAR_SRCS "bvar_*_unittest.cpp")
 add_executable(test_bvar $<TARGET_OBJECTS:BUTIL_LIB>
+                         $<TARGET_OBJECTS:PROTO_LIB>
                          ${BVAR_SOURCES}
                          ${TEST_BVAR_SRCS})
 target_link_libraries(test_bvar gtest
                                 ${GPERFTOOLS_LIBRARIES}
                                 ${DYNAMIC_LIB})
 
-add_library(TEST_PROTO_OBJ OBJECT ${TEST_PROTO_SRCS})
 add_executable(test_butil ${TEST_BUTIL_SOURCES}
-                          $<TARGET_OBJECTS:TEST_PROTO_OBJ>
+                          $<TARGET_OBJECTS:TEST_PROTO_LIB>
                           $<TARGET_OBJECTS:BUTIL_LIB>
-                          $<TARGET_OBJECTS:OBJ_LIB>)
+                          $<TARGET_OBJECTS:OBJ_LIB>
+                          $<TARGET_OBJECTS:PROTO_LIB>)
 target_link_libraries(test_butil gtest ${GPERFTOOLS_LIBRARIES} ${DYNAMIC_LIB})
 
 file(GLOB BTHREAD_UNITTESTS "bthread*unittest.cpp")
 foreach(BTHREAD_UT ${BTHREAD_UNITTESTS})
     get_filename_component(BTHREAD_UT_WE ${BTHREAD_UT} NAME_WE)
     add_executable(${BTHREAD_UT_WE} ${BTHREAD_UT} 
-                                    $<TARGET_OBJECTS:TEST_PROTO_OBJ>
+                                    $<TARGET_OBJECTS:TEST_PROTO_LIB>
                                     $<TARGET_OBJECTS:BUTIL_LIB>
-                                    $<TARGET_OBJECTS:OBJ_LIB>)
+                                    $<TARGET_OBJECTS:OBJ_LIB>
+                                    $<TARGET_OBJECTS:PROTO_LIB>)
     target_link_libraries(${BTHREAD_UT_WE}
                           gtest_main
                           ${GPERFTOOLS_LIBRARIES}
@@ -181,9 +193,10 @@ file(GLOB BRPC_UNITTESTS "brpc_*_unittest.cpp")
 foreach(BRPC_UT ${BRPC_UNITTESTS})
     get_filename_component(BRPC_UT_WE ${BRPC_UT} NAME_WE)
     add_executable(${BRPC_UT_WE} ${BRPC_UT}
-                                 $<TARGET_OBJECTS:TEST_PROTO_OBJ>
+                                 $<TARGET_OBJECTS:TEST_PROTO_LIB>
                                  $<TARGET_OBJECTS:BUTIL_LIB>
-                                 $<TARGET_OBJECTS:OBJ_LIB>)
+                                 $<TARGET_OBJECTS:OBJ_LIB>
+                                 $<TARGET_OBJECTS:PROTO_LIB>)
     target_link_libraries(${BRPC_UT_WE}
                           gtest_main
                           ${GPERFTOOLS_LIBRARIES}
