--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -173,7 +173,7 @@ endif()
 add_executable(test_butil ${TEST_BUTIL_SOURCES}
                           ${CMAKE_CURRENT_BINARY_DIR}/iobuf.pb.cc
                           $<TARGET_OBJECTS:BUTIL_LIB>)
-target_link_libraries(test_butil ${GTEST_LIB}
+target_link_libraries(test_butil gtest
                                  ${GPERFTOOLS_LIBRARIES}
                                  ${DYNAMIC_LIB})
 
